%changelog
* Fri Feb 23 2024 Jason Frey <fryguy9@gmail.com> - 19.0.0-1
- Initial build of manageiq-release for Spassky.

* Sat Aug 12 2023 Jason Frey <fryguy9@gmail.com> - 18.0.0-1
- Initial build of manageiq-release for Radjabov.

* Thu Feb 16 2023 Jason Frey <fryguy9@gmail.com> - 17.0.0-1
- Initial build of manageiq-release for Quinteros.

* Wed Aug 17 2022 Jason Frey <fryguy9@gmail.com> - 16.0.0-1
- Initial build of manageiq-release for Petrosian.

* Mon Feb 14 2022 Jason Frey <fryguy9@gmail.com> - 15.0.0-1
- Initial build of manageiq-release for Oparin.

* Tue Aug 31 2021 Jason Frey <fryguy9@gmail.com> - 14.0.0-1
- Initial build of manageiq-release for Najdorf

* Mon Feb 22 2021 Jason Frey <fryguy9@gmail.com> - 13.0.0-1
- Initial build of manageiq for Morphy.

* Tue Oct 27 2020 Satoe Imaishi <simaishi@redhat.com> - 12.0.0-1
- Initial build of manageiq for Lasker.