@@ -14,7 +14,7 @@ repos:
 version:
 release:
 rpm:
-  version: 19.0.0
+  version: 20.0.0
   release: 0
   repo_name:
   org_name: manageiq
@@ -36,21 +36,21 @@ rpm_repository:
   - s390x
   - x86_64
   :content:
-    :19-spassky:
+    :20-tal:
       :targets:
       - el9
       :rpms:
         :kafka: !ruby/regexp /.+-3\.7.+/
-        :manageiq: !ruby/regexp /.+-19\.\d\.\d-(alpha|beta|rc)?\d+(\.\d)?\.el.+/
-        :manageiq-release: !ruby/regexp /.+-19\.0.+/
+        :manageiq: !ruby/regexp /.+-20\.\d\.\d-(alpha|beta|rc)?\d+(\.\d)?\.el.+/
+        :manageiq-release: !ruby/regexp /.+-20\.0.+/
         :python-bambou: !ruby/regexp /.+-3\.1\.1.+/
         :python-pylxca: !ruby/regexp /.+-2\.1\.1.+/
         :python-unittest2: !ruby/regexp /.+-1\.1\.0.+/
         :python-vspk: !ruby/regexp /.+-5\.3\.2.+/
         :repmgr13: !ruby/regexp /.+-5\.2\.1.+/
         :wmi: !ruby/regexp /.+-1\.3\.14.+/
-    :19-spassky-nightly:
+    :20-tal-nightly:
       :targets:
       - el9
       :rpms:
-        :manageiq-nightly: !ruby/regexp /.+-19\.\d\.\d-(\d\.\d\.)?\d{14,}+\.el.+/
+        :manageiq-nightly: !ruby/regexp /.+-20\.\d\.\d-(\d\.\d\.)?\d{14,}+\.el.+/
