@@ -1,0 +1,41 @@
+[manageiq-20-tal]
+name=ManageIQ 20 (Tal) Release - $basearch
+baseurl=https://rpm.manageiq.org/release/20-tal/el$releasever/$basearch
+enabled=1
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-20-tal-noarch]
+name=ManageIQ 20 (Tal) Release - noarch
+baseurl=https://rpm.manageiq.org/release/20-tal/el$releasever/noarch
+enabled=1
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-20-tal-source]
+name=ManageIQ 20 (Tal) Release - source
+baseurl=https://rpm.manageiq.org/release/20-tal/el$releasever/src
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-20-tal-nightly]
+name=ManageIQ 20 (Tal) Nightly - $basearch
+baseurl=https://rpm.manageiq.org/release/20-tal-nightly/el$releasever/$basearch
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-20-tal-nightly-noarch]
+name=ManageIQ 20 (Tal) Nightly - noarch
+baseurl=https://rpm.manageiq.org/release/20-tal-nightly/el$releasever/noarch
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-20-tal-nightly-source]
+name=ManageIQ 20 (Tal) Nightly - source
+baseurl=https://rpm.manageiq.org/release/20-tal-nightly/el$releasever/src
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
